tests/ui/rust-2018/issue-52202-use-suggestions.stderr
error[E0422]: cannot find struct, variant or union type `Drain` in this scope
  --> $DIR/issue-52202-use-suggestions.rs:11:14
   |
LL |     let _d = Drain {};
   |              ^^^^^ not found in this scope
   |
help: consider importing this struct
   |
LL + use crate::plumbing::Drain;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0422`.
